--- a/TaskTableCMake/CMakeLists.txt
+++ b/TaskTableCMake/CMakeLists.txt
@@ -12,6 +12,8 @@ if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
 
-set(CMAKE_PREFIX_PATH "C:/Qt/5.12.3/mingw73_32")
+#set(CMAKE_PREFIX_PATH "C:/Qt/5.12.3/mingw73_32")
+
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
 add_subdirectory("project")
